--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_margin="15dp"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/txtNama"
             android:layout_width="wrap_content"
@@ -46,5 +47,22 @@
             android:layout_marginStart="12dp"
             android:text="Telepon : 082223018700"
             />
+
+        <ImageButton
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_edit_24"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="#0095F6"/>
+
+        <ImageButton
+            android:id="@+id/btnDelete"
+            android:layout_below="@id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_delete_24"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="#FF0000"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
